# yucode

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Containerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  test_connection.py
.github/workflows/: ci.yml  release.yml
coding_agent/: README.md  __init__.py
coding_agent/config/: __init__.py  config.yml  settings.py  simple_yaml.py
coding_agent/core/: __init__.py  branch_lock.py  coordinator.py  errors.py  green_contract.py  lane_events.py  lsp_registry.py  policy_engine.py  providers.py  recovery_recipes.py  runtime.py  session.py  stale_branch.py  summary_compression.py  task_packet.py  task_registry.py  team_cron_registry.py  worker_registry.py
coding_agent/hooks/: __init__.py
coding_agent/interface/: __init__.py  bridge.py  cli.py  commands.py  render.py  server.py
coding_agent/memory/: __init__.py  compact.py  prompting.py  skills.py
coding_agent/observability/: __init__.py  logging.py  metrics.py
coding_agent/plugins/: __init__.py  mcp.py
coding_agent/plugins/mcp_servers/: __init__.py  _protocol.py  databook_mcp.py  docx_mcp.py  excel_mcp.py  finance_mcp.py  pdf_mcp.py
coding_agent/security/: __init__.py  bash_validation.py  permissions.py  safety.py  sandbox.py
coding_agent/tools/: __init__.py  agent_tool.py  filesystem.py  misc.py  notebook.py  office.py  shell.py  web.py
tests/: test_core.py  test_event_handler.py  test_init_config.py  test_interactive_input.py  test_parity_harness.py  test_provider_parsing.py  test_security.py
